--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body {
-    font: Roboto;
-
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    
 }
 
-.header, .main, .footer {
+.content-one, .footer {
     background-color: #1F2937;
 }
 
@@ -12,15 +14,102 @@ body {
     font-weight: 900;
 }
 
-.link, .subtext, .footer {
+.link, .subtext, .footer, .sign-up, .sign-up-two {
     font-size: 18px;
     color: #E5E7EB;
+    
 }
 
 .logo {
     font-size: 24px;
+    font-weight: 900;
 }
 
 .hero, .logo {
     color: #F9FAF8;
 }
+
+.sign-up, .sign-up-two, .action, .action-subtext{
+    background-color: #3882F6;
+}
+
+.title {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.header, .main {
+    border-right:48px solid #1F2937;
+    border-left:48px solid #1F2937;
+    border-bottom:48px solid #1F2937;
+    
+}
+
+.content-two {
+    background-color: #F9FAF8;
+    border: 48px solid #F9FAF8;
+}
+
+.content-three {
+    background-color: #E5E7EB;
+        border: 48px solid #E5E7EB;
+}
+
+.content-four {
+    background-color: #F9FAF8;
+        border: 48px solid #F9FAF8;
+
+}
+
+img {
+    width: 100%
+}
+
+.images {
+    display: flex ;
+}
+
+ul {
+    list-style: none;
+    
+}
+
+li {
+    display: inline-block;
+    margin: 8px;
+    font-size: 18px;
+}
+
+.links{
+    margin-left:auto;
+    
+    
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 8px;
+    
+}
+
+.main {
+    display: flex;
+}
+
+.content-two {
+    display: flex;
+}
+
+.left-section {
+    
+}
+
+.image{
+    width: 800px;
+    height: auto;
+    margin-left: auto;
+}
+
