--- a/styles.css
+++ b/styles.css
@@ -67,8 +67,30 @@ img {
 }
 
 .images {
-    display: flex ;
+    
+    max-width: 140px;
 }
+
+.images-container {
+    display: flex;
+    gap: 32px;
+    justify-content: center;
+    text-align: center;
+    
+    
+}
+
+.illustration {
+    
+    
+}
+
+.image-img {
+    border-radius: 10px;
+    border: 4px #3882F6 solid;
+}
+
+
 
 ul {
     list-style: none;
@@ -101,6 +123,13 @@ li {
 
 .content-two {
     display: flex;
+    flex-direction: column;
+    
+
+}
+
+.title {
+    align-self: center;
 }
 
 .left-section {
@@ -113,3 +142,7 @@ li {
     margin-left: auto;
 }
 
+.sign-up, .sign-up-two {
+    border-radius: 10px;
+    padding: 6px 18px;
+}
